--- a/DTEKITTRAINING-IIS-V2/AwesomeWebApp/Views/DtekWorkshops/Index.cshtml
+++ b/DTEKITTRAINING-IIS-V2/AwesomeWebApp/Views/DtekWorkshops/Index.cshtml
@@ -12,12 +12,20 @@
                 <p>DTEKITINNOVATIONS</p>
                 <img src="~/Content/images/EINSTIEN.png" alt="DtekItInnovations Training" height="278" width="495">
             </td>
+            
+             </tr>
+    </table>
+
+    <table class="table">
+        <tr>
+            <td>
+            </td>
             <td>
                 <p>WORKSHOP 4</p>
-                <img src="~/Content/images/Workshop4-netsec.png" alt="DtekItInnovations Training" height="400" width="800">
+                <img src="~/Content/images/Workshop4-netsec.png" alt="DtekItInnovations Training" height="600" width="1200">
             </td>
 
-        </tr> 
+        </tr>
     </table>
 
 </div>
