--- a/DTEKITTRAINING-IIS-master/AwesomeWebApp/Views/Home/Index.cshtml
+++ b/DTEKITTRAINING-IIS-master/AwesomeWebApp/Views/Home/Index.cshtml
@@ -42,7 +42,7 @@
         <td>
 
             <img src="~/Content/images/icon-iis.png" alt="Internet Information Services 10" height="278" width="495">
-
+            <img src="~/Content/images/windowsserver2016datacenter.png" alt="Internet Information Services 10" height="278" width="495">
 
         </td>
 
