--- a/DTEKTRAINING AZWebAPP-master/AwesomeWebApp/Views/Home/Index.cshtml
+++ b/DTEKTRAINING AZWebAPP-master/AwesomeWebApp/Views/Home/Index.cshtml
@@ -1,20 +1,20 @@
 ﻿@{
     ViewBag.Title = "Home Page";
-    
+
     if (System.Configuration.ConfigurationManager.AppSettings["STAGE"] == "true")
     {
         ViewBag.Title = "STAGE";
     }
-    
+
 }
 
 @{
     if (System.Configuration.ConfigurationManager.AppSettings["STAGE"] == "true")
     {
-<div class="jumbotron">
-    <h1>DTEKITINNOVATIONS TRAINING STAGE </h1>
-    <p class="lead">Example ASP.NET Web Content hosted on an Azure Web APP.</p>
-</div>
+        <div class="jumbotron">
+            <h1>DTEKITINNOVATIONS TRAINING STAGE </h1>
+            <p class="lead">Example ASP.NET Web Content hosted on an Azure Web APP.</p>
+        </div>
     }
     else
     {
@@ -24,27 +24,38 @@
         </div>
     }
 }
-        <table class="table">
-            <tr>
-                <td>
+<table class="table">
+    <tr>
+        <td>
 
-                    <img src="~/Content/images/DTEKITINNOVATIONS GRAPHIC.png" alt="DTEKITINNOVATION ROCKS !!!!!!" height="278" width="495">
-                    <img src="~/Content/images/essex-county-council-logo.png" alt="ESSEX COUNTY COUNCIL" height="278" width="495">
+            <img src="~/Content/images/DTEKITINNOVATIONS GRAPHIC.png" alt="DTEKITINNOVATION ROCKS !!!!!!" height="278" width="495">
+            <img src="~/Content/images/essex-county-council-logo.png" alt="ESSEX COUNTY COUNCIL" height="278" width="495">
 
 
-                </td>
-                
-            </tr>
-        </table>
+        </td>
+
+    </tr>
+</table>
+<table class="table">
+    <tr>
+        <td>
+
+            <img src="~/Content/images/web-app.png" alt="DTEKITINNOVATION ROCKS !!!!!!" height="450" width="1000">
+
+
+        </td>
+
+    </tr>
+</table>
 
 
 
 @section scripts {
-<script>
+    <script>
     $(function() {
         $("#logsButton").click(function() {
             $.get("@Url.Action("ProduceLogs", "Home")");
         });
     });
-</script>
+    </script>
 }
